Bug 1811303 - Make a pen usable to draw on a pdf on Windows r=saschanaz, a=dsmith

Differential Revision: https://phabricator.services.mozilla.com/D173425